# GEMINI-4nu

./: README.md  bashrc.sh
ROOT/Yosoi_11B_0.5/: Ex_1.000000.root  Ex_10.000000.root  Ex_11.000000.root  Ex_12.000000.root  Ex_13.000000.root  Ex_14.000000.root  Ex_15.000000.root  Ex_16.000000.root  Ex_17.000000.root  Ex_18.000000.root  Ex_19.000000.root  Ex_2.000000.root  Ex_20.000000.root  Ex_21.000000.root  Ex_22.000000.root  Ex_23.000000.root  Ex_24.000000.root  Ex_25.000000.root  Ex_26.000000.root  Ex_27.000000.root  Ex_28.000000.root  Ex_29.000000.root  Ex_3.000000.root  Ex_30.000000.root  Ex_31.000000.root  Ex_32.000000.root  Ex_33.000000.root  Ex_34.000000.root  Ex_35.000000.root  Ex_36.000000.root  Ex_37.000000.root  Ex_38.000000.root  Ex_39.000000.root  Ex_4.000000.root  Ex_40.000000.root  Ex_41.000000.root  Ex_42.000000.root  Ex_43.000000.root  Ex_44.000000.root  Ex_45.000000.root  (+10 more)
ROOT/Yosoi_11B_1/: Ex_1.000000.root  Ex_10.000000.root  Ex_11.000000.root  Ex_12.000000.root  Ex_13.000000.root  Ex_14.000000.root  Ex_15.000000.root  Ex_16.000000.root  Ex_17.000000.root  Ex_18.000000.root  Ex_19.000000.root  Ex_2.000000.root  Ex_20.000000.root  Ex_21.000000.root  Ex_22.000000.root  Ex_23.000000.root  Ex_24.000000.root  Ex_25.000000.root  Ex_26.000000.root  Ex_27.000000.root  Ex_28.000000.root  Ex_29.000000.root  Ex_3.000000.root  (+27 more)
gemini/: CMakeCache.txt  CMakeLists.txt  Level.csv  LevelDensity.cpp  Makefile  Nucleus.cpp  Nucleus.csv  cmake_install.cmake  finalGen.bkg  finalGen.cpp  finalGen.cpp.bkg
gemini/tbl/: evap copy.inp  evap.inp
run/: run.py  singleRun.py
(+205 files in other folders)
